# minimal-logic-prover

./: .gitignore  README.md  minimal-logic-proover.cabal
app/: Main.hs
src/: Command.hs  CommandParser.hs  Formula.hs  FormulaParser.hs  Input.hs  InputParser.hs  InteractiveProover.hs  Tactic.hs  TacticParser.hs
