name:                minimal-logic-proover
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/minimal-logic-proover#readme
license:             BSD3
license-file:        LICENSE
author:              sumirechan0341
maintainer:          mazeppa1108@gmail.com
copyright:           2017 sumirechan0341
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     InteractiveProover,
                       Command,
                       CommandParser,
                       Formula,
                       FormulaParser,
                       Input,
                       InputParser,
                       Tactic,
                       TacticParser
  build-depends:       base >= 4.7 && < 5,
                       parsec,
                       containers,
                       directory
  default-language:    Haskell2010

executable minimal-logic-proover-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , minimal-logic-proover
  default-language:    Haskell2010

test-suite minimal-logic-proover-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , minimal-logic-proover
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/minimal-logic-proover
